(executable
 (name main)
 (public_name virt-top)
 (modules collect csv_output main opt_calendar opt_csv opt_gettext opt_xml
   redraw screen stream_output top types utils version)
 (libraries calendar csv curses extlib gettext gettext-stub libvirt str
   xml-light)
 (flags -w -50-27-9-32))

(rule
 (target version.ml)
 (action
  (write-file %{target} "let version = \"%{version:virt-top}\"")))
